*Restyling ad *Importing like button on ad collection *Setting up animation about ad card, *Fixing blurry image nad text on ad *Fixing favorite number counting *Setting up favorites page

--- a/src/app/components/site/site.component.scss
+++ b/src/app/components/site/site.component.scss
@@ -277,13 +277,19 @@ p-carousel {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 10px;
+    align-items: center;
 }
 
 .image {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 230px;
+    overflow: hidden;
+    img {
+        max-width: fit-content;
+        display: block;
+    }
 }
 
 .cardBody {
@@ -291,7 +297,7 @@ p-carousel {
     flex-direction: column;
     align-items: center;
     width: 200px;
-    height: 50px;
+    height: 60px;
 }
 
 .description {
@@ -322,6 +328,7 @@ p-carousel {
     border: 0 0 5px 0;
     border-bottom: 2px solid $lightgray-second;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 p-carousel {
@@ -347,15 +354,16 @@ p-carousel {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 230px;
 }
 
 .cardBody {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
-    height: 50px;
+    width: 100%;
+    height: 60px;
+    align-items: center;
 }
 
 .description {
@@ -506,4 +514,35 @@ p-sidebar {
     color: $lightgray-second;
     margin-top: 50px;
     border-radius: 15px;
+}
+
+.adLine {
+    border: 0 0 1px 0;
+    border-bottom: 1px solid $red;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    width: 70%;
+    height: 1px;
+    margin: 0px auto;
+}
+
+.cardHover {
+    box-shadow: 8px 14px 38px rgba(39, 44, 49, .06), 1px 3px 8px rgba(39, 44, 49, .03);
+    transition: all .5s ease;
+    /* back to normal */
+    &:hover {
+        box-shadow: 8px 28px 50px rgba(39, 44, 49, .07), 1px 6px 12px rgba(39, 44, 49, .04);
+        transition: all .4s ease;
+        // transform: translate3D(0, -1px, 0) scale(1.03);
+        // transform: translateX(-50%) translateX(-0.4px) translateY(-50%) translateY(-0.4px);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.05);
+        /* zoom in */
+    }
+}
+
+.mat-icon {
+    color: $red;
 }
